# frum

./: .gitignore  Cargo.toml  README.md  _farm  build.rs  farm-manifest.rc  frum-manifest.rc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: farm  frum  frum_reason  rbenv  run  run_init
completions/: farm.bash  farm.zsh  frum.bash  frum.zsh
src/: alias.rs  cli.rs  command.rs  config.rs  input_version.rs  log.rs  main.rs  remote_ruby_index.rs  symlink.rs  version.rs  version_file.rs
src/archive/: extract.rs  mod.rs  tar_xz.rs  zip.rs
src/commands/: clean.rs  completions.rs  global.rs  init.rs  install.rs  install_list.rs  local.rs  mod.rs  uninstall.rs  versions.rs
src/shell/: bash.rs  fish.rs  mod.rs  powershell.rs  shell.rs  zsh.rs
src/shell/infer/: mod.rs  unix.rs  windows.rs
src/shell/windows_command/: cd.cmd  mod.rs
tests/: e2e.rs  lib.rs
tests/command_tests/: mod.rs
tests/e2e/: mod.rs
tests/utils/: macros.rs  mod.rs
