[package]
name = "frum"
version = "0.1.0-alpha.1"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/TaKO8Ki/frum"
repository = "https://github.com/TaKO8Ki/frum"
build = "build.rs"
readme = "README.md"
description = "A blazing fast and simple Ruby version manager written in Rust"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.1", features = ["blocking", "json", "rustls-tls"], default-features = false }
regex = "1"
thiserror = "1.0"
anyhow = "1.0"
tar = "0.4.33"
xz2 = "0.1.6"
tempfile = "3.2.0"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4"
semver = "0.11.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
colored = "2.0.0"
dirs = "3.0.1"
indoc = "1.0.3"
encoding_rs_io = "0.1.7"
zip = "0.5.11"

[target.'cfg(windows)'.dependencies]
csv = "1.1.5"

[build-dependencies]
embed-resource = "1.6.1"

[dev-dependencies]
regex = "1"
walkdir = "2"
difference = "2.0.0"

